# AgentNativeDB

./: .gitignore  AGENTS.md  Makefile  README.md  README_zh.md  config.example.json  go.mod  go.sum  test_client.sh
.mothx/: rule.md
api/http/: integration_test.go  router.go  vector.go
api/mcp/: server.go
cmd/andb/: cli.go  client.go  main.go  server.go
cmd/cli/: main.go
cmd/client/: main.go
cmd/mock/: main.go
cmd/server/: main.go
config/: config.go
docs/: AgentNativeDB-Design.md  client.md  cluster.md  raft-review.md
examples/: client_demo.sh
examples/basic/: main.go
internal/agent/: agent_test.go  audit.go  audit_test.go  collab_test.go  coordinator.go  decision.go  e2e_test.go  enhanced_test.go  helpers.go  memory.go  memory_enhanced.go  permission.go  permission_test.go  rag.go  rag_test.go  reliability_test.go  session.go  session_enhanced.go  taskqueue.go  taskqueue_test.go
internal/graph/: store.go  store_test.go
internal/knowledge/: lineage.go  lineage_test.go
internal/model/: decision.go  entity.go  memory.go  model_test.go  session.go  types.go
internal/raft/: engine.go  node.go  raft_test.go  run.go  storage.go  transport.go
internal/storage/: cache.go  cache_test.go  engine.go  keyencode.go  keyencode_test.go  table_manager.go  table_manager_test.go  testhelper.go
internal/util/: uuid.go  uuid_test.go
npm/: README.md  package.json
pypi/: README.md  pyproject.toml  setup.py
pypi/src/andb_installer/: cli.py
sdk/: agentnativedb.go  agentnativedb_test.go
ui/: index.html  package-lock.json  package.json  vite.config.js
(+48 files in other folders)
